--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/db52d8bb67.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="styles/Common.css">
-    <link rel="stylesheet" href="styles/Nav.css">
-    <link rel="stylesheet" href="styles/Homepage.css">
-    <link rel="stylesheet" href="styles/Footer.css">
-    <link rel="stylesheet" href="styles/media-queries.css">
+    <link rel="stylesheet" href="Styles/Common.css">
+    <link rel="stylesheet" href="Styles/Nav.css">
+    <link rel="stylesheet" href="Styles/Homepage.css">
+    <link rel="stylesheet" href="Styles/Footer.css">
+    <link rel="stylesheet" href="Styles/media-queries.css">
 
 </head>
 
