--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,16 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/db52d8bb67.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="styles/Common.css">
-    <link rel="stylesheet" href="styles/Nav.css">
-    <link rel="stylesheet" href="styles/Footer.css">
-    <link rel="stylesheet" href="styles/skewed-header.css">
-    <link rel="stylesheet" href="styles/Page-container.css">
-    <link rel="stylesheet" href="styles/Helpers.css">
-    <link rel="stylesheet" href="styles/contact.css">
-    <link rel="stylesheet" href="styles/form.css">
-    <link rel="stylesheet" href="styles/buttons.css">
-    <link rel="stylesheet" href="styles/media-queries.css">
+    <link rel="stylesheet" href="Styles/Common.css">
+    <link rel="stylesheet" href="Styles/Nav.css">
+    <link rel="stylesheet" href="Styles/Footer.css">
+    <link rel="stylesheet" href="Styles/skewed-header.css">
+    <link rel="stylesheet" href="Styles/Page-container.css">
+    <link rel="stylesheet" href="Styles/Helpers.css">
+    <link rel="stylesheet" href="Styles/contact.css">
+    <link rel="stylesheet" href="Styles/form.css">
+    <link rel="stylesheet" href="Styles/buttons.css">
+    <link rel="stylesheet" href="Styles/media-queries.css">
 
 
 
