--- a/about.html
+++ b/about.html
@@ -11,14 +11,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/db52d8bb67.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="styles/Common.css">
-    <link rel="stylesheet" href="styles/Nav.css">
-    <link rel="stylesheet" href="styles/Footer.css">
-    <link rel="stylesheet" href="styles/skewed-header.css">
-    <link rel="stylesheet" href="styles/Page-container.css">
-    <link rel="stylesheet" href="styles/Square-grid.css">
-    <link rel="stylesheet" href="styles/Helpers.css">
-    <link rel="stylesheet" href="styles/media-queries.css">
+    <link rel="stylesheet" href="Styles/Common.css">
+    <link rel="stylesheet" href="Styles/Nav.css">
+    <link rel="stylesheet" href="Styles/Footer.css">
+    <link rel="stylesheet" href="Styles/skewed-header.css">
+    <link rel="stylesheet" href="Styles/Page-container.css">
+    <link rel="stylesheet" href="Styles/Square-grid.css">
+    <link rel="stylesheet" href="Styles/Helpers.css">
+    <link rel="stylesheet" href="Styles/media-queries.css">
 
 </head>
 
